--- a/web.config
+++ b/web.config
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <system.webServer>
+        <httpErrors>
+       <error statusCode="401" path="http://foo.com/default.htm" responseMode="Redirect" />
+</httpErrors>
         <urlCompression doDynamicCompression="true" doStaticCompression="true" dynamicCompressionBeforeCache="true"/>
         <staticContent>
             <remove fileExtension=".svg" />
