--- a/web.config
+++ b/web.config
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <system.web>
+    <customErrors mode="On"
+              redirectMode="ResponseRewrite">
+        <error statusCode="404"
+           redirect="~/404.html"/>
+      </customErrors>
+      <globalization
+        fileEncoding="utf-8"
+        requestEncoding="utf-8"
+        responseEncoding="utf-8"
+        culture="en-US"
+        uiCulture="de-DE"
+      />
+  </system.web>
     <system.webServer>
         <urlCompression doDynamicCompression="true" doStaticCompression="true" dynamicCompressionBeforeCache="true"/>
         <staticContent>
@@ -33,8 +47,11 @@
             <remove name="PHP56_via_FastCGI" />
             <add name="PHP56_via_FastCGI" path="*.php" verb="GET,HEAD,POST,PUT,DELETE,OPTIONS" modules="FastCgiModule" scriptProcessor="D:\Program Files (x86)\PHP\v5.6\php-cgi.exe" resourceType="Either" />
         </handlers>
-        <httpErrors>
-       <error statusCode="401" path="http://foo.com/default.htm" responseMode="Redirect" />
-        </httpErrors>
+        <httpErrors errorMode="Custom"
+            defaultResponseMode="File">
+      <remove statusCode="404"/>
+      <error statusCode="404"
+          path="~/404.html"/>
+    </httpErrors>
     </system.webServer>
 </configuration>
