--- a/web.config
+++ b/web.config
@@ -15,6 +15,7 @@
       />
   </system.web>
     <system.webServer>
+        <httpErrors existingResponse="PassThrough" />
         <urlCompression doDynamicCompression="true" doStaticCompression="true" dynamicCompressionBeforeCache="true"/>
         <staticContent>
             <remove fileExtension=".svg" />
